styles/App.scss
@import './common/box.scss';
@import './common/iconHeader.scss';
@import './components/gameMode.scss';
@import './components/mainMenu.scss';
@import './components/mainWindow.scss';
@import './components/image.scss';
@import './components/redButton.scss';
@import './components/answersOnQuestion.scss';
@import './components/modalGameOver.scss';
@import './components/ranking.scss';
@import './components/timeLeftText.scss';
@import './components/lightSaber.scss';
@import './components/loader.scss';
@import './components/whiteButton.scss';


:root {
  --border-radius: 15px;
  --box-shadow-color: red;
  --box-shadow-simple: 0px 4px 4px rgba(0, 0, 0, 0.25);
  --box-shadow-property: var(--box-shadow-simple),
    4px 4px 40px rgba(255, 0, 0, 0.9), inset 4px 5px 4px rgba(0, 0, 0, 0.5);
  --base-black: #000000;
  --base-white: #ffffff;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  outline: none;
}

body {
  font-family: 'Montserrat', sans-serif;
  padding: 0 5vw;
  min-height: 100vh;
  background-image: url('/static/assets/ui/QuizBackground.png');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

